--- a/reporting/Lin_ST559_Project.Rmd
+++ b/reporting/Lin_ST559_Project.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "INLA"
+title: "INLA for GMRFs (e.g. GLMMs, Spatial Models) with An Example of Leukemia Cases"
 author: "Frances Lin"
 date: "June 2022"
 output: pdf_document
 header-includes: \usepackage{setspace}\onehalfspacing
 ---
 
-## Background and Introduction 
+## Background and Introduction     
 
 The steps involving the Bayesian inference may appear easy and straightforward: updating prior believes about the unknown parameters with observed data and obtaining the posterior distribution for the parameters. However, this is much harder to do in practice since solutions in closed form may not be determined. 
 
@@ -42,27 +42,27 @@ However, the integral is generally intractable and requires the use of numerical
 
 The latent Gaussian Models (LGMs) is a class of three-state Bayesian hierarchical models. It involves the following stages: 
 
-Observations $y$ is assumed to be conditionally independent, given a latent Gaussian random field $x$ (joint distribution of all parameters in the linear predictor) and hyperparameters $\theta$, 
+Observations $y$ is assumed to be conditionally independent, given a latent Gaussian random field $x$ (joint distribution of all parameters in the linear predictor) and hyperparameters $\theta$ 
 
 $$
 y | x, \theta_1 \sim \prod_{i \in I} p (y_i | x_i, \theta_1). \ \ \ \ \ _{likelihood}
 $$
 
-The versatility of the model class can be specified through the unobserved latent Gaussian field 
+The versatility of the model class can be specified through the unobserved latent Gaussian field
 
 $$
 x | \theta_2 \sim p(x | \theta_2) = N(\mu(\theta_2), Q^{-1}(\theta_2)), \ \ \ \ \ _{latent \ field}
 $$
-where the precision matrix $Q^{-1} = \Sigma$, which captures the underlying dependence structure of the data. Latent field can be, for example, covariates, unstructured random effects (e.g. white noise), structure random effects (e.g. temporal dependency, spatial dependency, smoothness terms). 
+where $Q = \Sigma^{-1}$ is the precision matrix, which captures the underlying dependence structure of the data. Latent field can be, for example, covariates, unstructured random effects (e.g. white noise), structure random effects (e.g. temporal dependency, spatial dependency, smoothness terms). 
 
-The hyperparameters of the latent field that is non-Gaussian, 
+The hyperparameters of the latent field that is not necessarily Gaussian 
 
 $$
-\theta = {(\theta_1, \theta_2)} \sim p(\theta), \ \ \ \ \ _{hyperpriors}
+\theta = {(\theta_1, \theta_2)} \sim p(\theta) \ \ \ \ \ _{hyperpriors}
 $$
 contains the prior knowledge of the parameters and controls the likelihood of the data and/or the latent Gaussian field. Hyperparameters can be, for example, variance of observation noise, variance of the unstructured random field, range of a structured random effect. 
 
-Then the posterior distribution, structured in a hierarchical way, becomes 
+Then, the posterior distribution, structured in a hierarchical way, becomes 
 
 $$
 p(x, \theta | y) \propto \prod_{i \in I} p(y_i | x_i, \theta) p(x | \theta) p(\theta).
@@ -98,9 +98,14 @@ $$
 x = (\eta, \alpha, \beta, f(\cdot))
 $$
 
-is Gaussian. This can be done by putting Gaussian priors on the intercept and the parameter of the fixed effects. 
+is Gaussian. I.e. 
 
-If we further assume conditional independence of $x$, then this latent field $x$ is a Gaussian Markov Random Field. 
+$$
+x = (\eta, \alpha, \beta, f(\cdot)) | \theta \sim N(\mu(\theta), Q^{-1}(\theta)). 
+$$
+This can be achieved by putting Gaussian priors on the intercept and the parameter of the fixed effects. 
+
+If we further assume conditional independence of $x$, then this latent field $x$ is a Gaussian Markov random field. 
 
 
 ### 3. Gaussian Markov Random Fields
@@ -122,7 +127,7 @@ The Markov assumption in the GMRFs results in a sparse precision matrix.
 
 The `R` package `R-INLA` have found spatial applications in a wide variety of fields such as environment, ecology, disease mapping, medical imaging, public health, cancer research, energy, economics, risk analysis, etc. 
 
-Some selected examples include: environmental risk factors to liver Fluke in cattle (Innocent et al., 2017); modelling recovering fish populations (Boudreau et al., 2017); polio-virus eradication in Pakistan (Mercer et al., 2017); cortical surface fMRI data (Mejia et al., 2017); socio demographic and geographic impact of HPV vaccination (Rutten et al., 2017); topsoil metals and cancer mortality (Lopez-Abente et al., 2017) with spatially misaligned data; ethanol and gasoline pricing (Laurini, 2017); applications in spatial econometrics (Bivand et al., 2014; Gomez-Rubio et al., 2015; Gomez-Rubio et al., 2014); probabilistic prediction of wind power (Lenzi et al., 2017); modeling landslides as point processes (Lombardo et al., 2018); predicting extreme rainfall events in space and time (Opitz et al., 2018), etc.
+Some selected examples include: environmental risk factors to liver Fluke in cattle (Innocent et al., 2017); modelling recovering fish populations (Boudreau et al., 2017); polio-virus eradication in Pakistan (Mercer et al., 2017); cortical surface fMRI data (Mejia et al., 2017); socio-demographic and geographic impact of HPV vaccination (Rutten et al., 2017); topsoil metals and cancer mortality (Lopez-Abente et al., 2017) with spatially misaligned data; ethanol and gasoline pricing (Laurini, 2017); applications in spatial econometrics (Bivand et al., 2014; Gomez-Rubio et al., 2015; Gomez-Rubio et al., 2014); probabilistic prediction of wind power (Lenzi et al., 2017); modeling landslides as point processes (Lombardo et al., 2018); predicting extreme rainfall events in space and time (Opitz et al., 2018), etc.
 
 
 
