--- a/reporting/Lin_ST559_Project.Rmd
+++ b/reporting/Lin_ST559_Project.Rmd
@@ -12,7 +12,7 @@ The steps involving the Bayesian inference may appear easy and straightforward: 
 
 The simulation-based inference through the idea of MCMC (Markov chain Monte Carlo) was then introduced and represented a breakthrough in Bayesian inference (Robert & Casella, 1999) in the early 1990s. MCMC tools such as `WinBugs` (Spiegelhalter et al., 1995), `JAGS` (Plummer, 2016), and `stan` (Stan Development Team, 2015) have also been developed. Bayesian statistics has gained popularity in many fields. However, these MCMC methods, based on sampling, not only are computationally demanding (i.e. requires a large amount of CPU), but also present convergence issues. 
 
-INLA (integrated nested Laplace approximation) is a fast alternative to MCMC for a class of LGMs (latent Gaussian models) that does not require sampling. I.e. INLA can be applied to a very wide and flexible class of models ranging from GLMM to spatial and spatio-temporal models, named LGMs. INLA allows for faster and more accurate inference without trading speed for accuracy, and it can be accessed through the **R** package `R-INLA`. 
+INLA (integrated nested Laplace approximation) is a fast alternative to MCMC for a class of LGMs (latent Gaussian models) that does not require sampling. I.e. INLA can be applied to a very wide and flexible class of models ranging from GLMMs (generalized linear mixed models) to spatial and spatio-temporal models, named LGMs. INLA allows for faster and more accurate inference without trading speed for accuracy, and it can be accessed through the **R** package `R-INLA`. 
 
 
 ## Notation 
@@ -40,7 +40,7 @@ $$
 y | x, \theta_1 \sim \prod_{i \in I} p (y_i | x_i, \theta_1). \ \ \ \ \ _{likelihood}
 $$
 
-The versatility of the model class can be specified through the unobserved latent Gaussian field
+The versatility of the model class can be specified through the unobserved latent field. The latent field is assumed to be a GMRF (Gaussian Markov random field) with a sparse precision matrix $Q$ 
 
 $$
 x | \theta_2 \sim p(x | \theta_2) = N(\mu(\theta_2), Q^{-1}(\theta_2)), \ \ \ \ \ _{latent \ field}
@@ -52,12 +52,16 @@ The hyperparameters of the latent field that is not necessarily Gaussian
 $$
 \theta = {(\theta_1, \theta_2)} \sim p(\theta) \ \ \ \ \ _{hyperpriors}
 $$
-contains the prior knowledge of the parameters and controls the likelihood of the data and/or the latent Gaussian field. Hyperparameters can be, for example, variance of observation noise, variance of the unstructured random field, range of a structured random effect. 
+contains the prior knowledge of the parameters and can be used to account for variability and strength of dependence. Hyperparameters can be, for example, variance of observation noise, variance of the unstructured random field, range of a structured random effect. 
 
 Then, the posterior distribution, structured in a hierarchical way, becomes 
 
 $$
-p(x, \theta | y) \propto \prod_{i \in I} p(y_i | x_i, \theta) p(x | \theta) p(\theta).
+p(x, \theta | y) \propto p(y|x, \theta) p(x, \theta)
+$$
+
+$$
+\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \propto \prod_{i \in I} p(y_i | x_i, \theta) p(x | \theta) p(\theta).
 $$
 
 For computational reasons and to ensure accurate approximations, we assume the following assumptions:  
@@ -71,7 +75,7 @@ For computational reasons and to ensure accurate approximations, we assume the f
 
 ### 2. Additive Models
 
-LGMs are an umbrella class that generalizes the large number of related additive and/or generalized linear models. Consider the generalized linear model setup, for example,
+LGMs are an umbrella class that generalizes the large number of related additive and/or generalized linear models. Consider the generalized linear mixed model setup, for example,
 
 $$
 y \sim \prod_i^N p(y_i | x_i, \theta)
@@ -80,9 +84,9 @@ $$
 $$
 g(\mu_i) = \eta_i = \alpha + \sum_j \beta_j z_{ji} + \sum_k f_{k}(w_{ki}) + \varepsilon_i,
 $$
-where $\alpha$ is the overall intercept, $\{\beta_j\}$ are linear effects of fixed covariates $z$, and $\{f_k\}$, which are used to represent specific Gaussian processes, are nonlinear/smooth effects of some covariates $w$. Examples of model components $f_k$ include random effects with different types of correlations, spatially or temporally correlated effects, smoothing and stochastic spline, and measure errors. 
+where $\alpha$ is the overall intercept, $\beta$ are linear effects of fixed covariates $z$, $\{f_k\}$, which are used to represent specific Gaussian processes, are nonlinear/smooth effects of some covariates $w$, and $\varepsilon$ are iid random effects. The model components $f_k$ are what make LGMs flexible. Examples of $f_k$ include random effects with different types of correlations, spatially or temporally correlated effects, smoothing and stochastic spline, and measure errors. 
 
-For GLMs (generalized linear models), the expression becomes $\alpha + \sum_j \beta_j z_{j}$ (i.e. $f(\cdot) = 0$). For GAMs (generalized additive models), the expression becomes $\alpha + \sum_k f_{k}(w_{k})$. 
+*For GLMs (generalized linear models), the expression becomes $\alpha + \sum_j \beta_j z_{j}$ (i.e. $f(\cdot) = 0$). For GAMs (generalized additive models), the expression becomes $\alpha + \sum_k f_{k}(w_{k})$.* 
 
 The model is a LGM $iff$ the joint distribution of 
 
@@ -95,7 +99,7 @@ is Gaussian. I.e.
 $$
 x = (\eta, \alpha, \beta, f(\cdot)) | \theta \sim N(\mu(\theta), Q^{-1}(\theta)). 
 $$
-This can be achieved by putting Gaussian priors on the intercept and the parameter of the fixed effects. 
+This can be achieved by assigning Gaussian priors to all terms (the intercept and the parameter of the fixed effects) in $x$. 
 
 If we further assume conditional independence of $x$, then this latent field $x$ is a Gaussian Markov random field. 
 
